<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nawwa.geevsimplepublish.Activities.CreateAnnounceActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:fillViewport="false"
        android:scrollbarStyle="insideInset"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageContainer"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_image_default" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textStateObject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textState"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupState"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignLeft="@+id/imageButton"
                android:layout_alignStart="@+id/imageButton"
                android:layout_below="@+id/imageButton"
                android:layout_column="0"
                android:layout_row="24"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">


                <RadioButton
                    android:id="@+id/stateNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textStateNew" />

                <RadioButton
                    android:id="@+id/stateUsed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textStateUsed" />

                <RadioButton
                    android:id="@+id/stateTofix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textStateToFix" />


            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/textTitleObject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintTitleOfObject"
                android:inputType="text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/textDescObject"
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:ems="10"
                android:hint="@string/hintDescObject"
                android:inputType="textMultiLine" />

            <fragment
                android:id="@+id/mapF"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="169dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/buttonPusblish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonPublish" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
